--- a/index.css
+++ b/index.css
@@ -198,38 +198,40 @@ aside#sideBar .quote textarea {
 /* media queries */
 
 @media(max-width:768px) {
-header #branding,
-header nav,
-header nav li,
-#newsletter h1,
-#newsletter form,
-#boxes .box
-/* about page format */
-article#main-col,
-aside#sideBar
-{
-    float:none;
-    text-align: center;
-width: 100%;
-}
+   
+    header #branding,
+    header nav,
+    header nav li,
+    #newsletter h1,
+    #newsletter form,
+    #boxes .box,
+    /* about page format */
+    article#main-col,
+    aside#sideBar {
+        float: none;
+        text-align: center;
+        width: 100%;
+    }
 
-header{
-    padding-bottom:  20px;
-};
+    header {
+        padding-bottom: 20px;
+    }
+
+    ;
 
 
-#showcase h1{
-    margin-top: 410px;
-}
+    #showcase h1 {
+        margin-top: 410px;
+    }
 
-#newsletter button .quote button{
-    display: block;
-    width: 100px;
-    margin-top: 10px;
-   float:right;
-}
+    #newsletter button .quote button {
+        display: block;
+        width: 100px;
+        margin-top: 10px;
+        float: right;
+    }
 
-#newsletter form input[type="email"]{
-    width: 100%;
-}
+    #newsletter form input[type="email"] {
+        width: 100%;
+    }
 }
