--- a/index.css
+++ b/index.css
@@ -144,8 +144,8 @@ header a:hover {
 /* about */
 
 
-.inverseText,
-aside#sideBar {
+
+.inverseText {
     background-color: #35424a;
     color: white;
     padding: 20px;
@@ -154,7 +154,10 @@ aside#sideBar {
 aside#sideBar {
     margin-top: 50px;
     float: right;
-    width: 20%;
+    width: 25%;
+    background-color: #35424a;
+    color: white;
+    padding: 30px;
 }
 
 article#main-col {
@@ -164,7 +167,7 @@ article#main-col {
 
 
 footer {
-    padding: 20px;
+    padding: 1px;
     margin-top: 20px;
     color: white;
     background: #e8491d;
@@ -190,7 +193,7 @@ ul#services li {
 
 aside#sideBar .quote input,
 aside#sideBar .quote textarea {
-    width: 90%;
+    width: 80%;
     padding: 5px;
 }
 
@@ -198,7 +201,7 @@ aside#sideBar .quote textarea {
 /* media queries */
 
 @media(max-width:768px) {
-   
+
     header #branding,
     header nav,
     header nav li,
@@ -206,30 +209,41 @@ aside#sideBar .quote textarea {
     #newsletter form,
     #boxes .box,
     /* about page format */
-    article#main-col,
-    aside#sideBar {
+    article#main-col
+     {
         float: none;
         text-align: center;
         width: 100%;
+    }
+
+    aside#sideBar {
+        /* float: left; */
+        text-align: center;
+        width: 100%;
+       margin-left: 10px;
+       padding: 0;
     }
 
     header {
         padding-bottom: 20px;
     }
 
-    ;
-
-
     #showcase h1 {
         margin-top: 410px;
     }
 
+    .button_1{
+        width: 100%;
+        display: block;
+        margin-top: 10px;
+    }
+/* 
     #newsletter button .quote button {
         display: block;
         width: 100px;
         margin-top: 10px;
         float: right;
-    }
+    } */
 
     #newsletter form input[type="email"] {
         width: 100%;
